Do not fail if ps2pdf is present and the .pdf files exist
If ps2pdf is not present on the system, the build
fails even if the .pdf files exist. The reason is that the .ps
files are created on the fly, and they are more recent than the
distributed .pdf. Makefile then runs "false <something>", which
obviously fails.

Setting PS2PDF to "true" is not a solution because we do not
want to ignore when the .pdf files are really absent.

This patch makes running $(PS2PDF) conditional, but still
imposes the .pdf files to be generated when running "make dist".

--- a/cmd/dot/Makefile.am
+++ b/cmd/dot/Makefile.am
@@ -45,6 +45,12 @@ endif
 man_MANS = dot.1 osage.1 patchwork.1
 pdf_DATA = dot.1.pdf osage.1.pdf patchwork.1.pdf
 
+if HAVE_PS2PDF
+pdf = $(pdf_DATA)
+else
+pdf = ERROR_NO_PS2PDF
+endif
+
 dot_SOURCES = dot.c no_builtins.c
 dot_CPPFLAGS = $(AM_CPPFLAGS) -DDEMAND_LOADING=1
 dot_LDADD = \
@@ -67,6 +73,7 @@ uninstall-hook:
 	(cd $(DESTDIR)$(bindir); for i in $(linkedprogram); do rm -f $$i; done;)
 	(cd $(DESTDIR)$(libdir); rm -f config;)
 
+if HAVE_PS2PDF
 dot.1.pdf: dot.1.ps
 	@PS2PDF@ $< $@
 
@@ -84,6 +91,7 @@ patchwork.1.pdf: patchwork.1.ps
 
 patchwork.1.ps: $(srcdir)/patchwork.1
 	@GROFF@ -Tps -man $< >$@
+endif
 
 dot_static_SOURCES = dot.c dot_builtins.c
 dot_static_CPPFLAGS = $(AM_CPPFLAGS) -DDEMAND_LOADING=0
@@ -140,6 +148,6 @@ dot_builtins_LDADD += $(top_builddir)/plugin/lasi/libgvplugin_lasi.la $(LASI_LIB
 endif
 
 
-EXTRA_DIST = dot.1 dot.1.pdf osage.1 osage.1.pdf patchwork.1 patchwork.1.pdf dot.vcxproj*
+EXTRA_DIST = dot.1 osage.1 patchwork.1 $(pdf) dot.vcxproj*
 
 DISTCLEANFILES = dot.1.pdf osage.1.pdf dot.1.ps osage.1.ps patchwork.1.pdf patchwork.1.ps
