--- a/cmd/gvmap/Makefile.am
+++ b/cmd/gvmap/Makefile.am
@@ -22,6 +22,12 @@ endif
 man_MANS = gvmap.1 cluster.1 gvmap.sh.1
 pdf_DATA = gvmap.1.pdf cluster.1.pdf gvmap.sh.1.pdf
 
+if HAVE_PS2PDF
+pdf = $(pdf_DATA)
+else
+pdf = ERROR_NO_PS2PDF
+endif
+
 noinst_HEADERS = make_map.h power.h country_graph_coloring.h
 
 gvmap_SOURCES = gvmap.c make_map.c power.c country_graph_coloring.c
@@ -58,6 +64,7 @@ cluster_LDADD = \
 
 gvmap.sh :
 
+if HAVE_PS2PDF
 gvmap.1.pdf: gvmap.1.ps
 	@PS2PDF@ $< $@
 
@@ -75,7 +82,8 @@ gvmap.sh.1.pdf: gvmap.sh.1.ps
 
 gvmap.sh.1.ps: $(srcdir)/gvmap.sh.1
 	@GROFF@ -Tps -man $< >$@
+endif
 
-EXTRA_DIST = $(man_MANS) $(pdf_DATA) gvmap.vcxproj*
+EXTRA_DIST = $(man_MANS) $(pdf) gvmap.vcxproj*
 
 DISTCLEANFILES = $(pdf_DATA) gvmap.1.ps cluster.1.ps gvmap.sh.1.ps
