--- a/contrib/diffimg/Makefile.am
+++ b/contrib/diffimg/Makefile.am
@@ -10,6 +10,12 @@ pdfdir = $(pkgdatadir)/doc/pdf
 man_MANS = diffimg.1
 pdf_DATA = diffimg.1.pdf
 
+if HAVE_PS2PDF
+pdf = $(pdf_DATA)
+else
+pdf = ERROR_NO_PS2PDF
+endif
+
 if WITH_LIBGD
 bin_PROGRAMS = diffimg
 endif
@@ -18,11 +24,13 @@ diffimg_SOURCES = diffimg.c
 
 diffimg_LDADD = @GDLIB_LIBS@ @MATH_LIBS@
 
+if HAVE_PS2PDF
 diffimg.1.pdf: diffimg.1.ps
 	@PS2PDF@ $< $@
 
 diffimg.1.ps: $(srcdir)/diffimg.1
 	@GROFF@ -Tps -man $< >$@
+endif
 
 GRAPH = "digraph G { hello -> world }"
 
@@ -34,5 +42,5 @@ test: diffimg
 	if `./diffimg hello1.png hello2.png >test2.png`;then echo same;else echo different;fi
 
 CLEANFILES = *.png
-EXTRA_DIST = diffimg.vcxproj* diffimg.1 diffimg.1.pdf
+EXTRA_DIST = diffimg.vcxproj* diffimg.1 $(pdf)
 DISTCLEANFILES = diffimg.1.pdf diffimg.1.ps
