--- a/contrib/prune/Makefile.am
+++ b/contrib/prune/Makefile.am
@@ -14,19 +14,27 @@ noinst_HEADERS = generic_list.h
 man_MANS = prune.1
 pdf_DATA = prune.1.pdf
 
+if HAVE_PS2PDF
+pdf = $(pdf_DATA)
+else
+pdf = ERROR_NO_PS2PDF
+endif
+
 prune_SOURCES = generic_list.c prune.c
 
 prune_LDADD = $(top_builddir)/lib/ingraphs/libingraphs_C.la \
 	$(top_builddir)/lib/cgraph/libcgraph.la \
 	$(top_builddir)/lib/cdt/libcdt.la
 
+if HAVE_PS2PDF
 prune.1.pdf: prune.1.ps
 	@PS2PDF@ $< $@
 
 prune.1.ps: prune.1
 	@GROFF@ -Tps -man $< >$@
+endif
 
-EXTRA_DIST = $(man_MANS) $(pdf_DATA) README test.gv prune.vcxproj*
+EXTRA_DIST = $(man_MANS) $(pdf) README test.gv prune.vcxproj*
 
 
 DISTCLEANFILES = $(pdf_DATA) prune.1.ps
