--- a/tclpkg/tcldot/Makefile.am
+++ b/tclpkg/tcldot/Makefile.am
@@ -28,7 +28,11 @@ LIBS = -lc
 AM_CFLAGS = $(TCL_CFLAGS)
 
 man = tcldot.3tcl
+if HAVE_PS2PDF
 pdf = tcldot.3tcl.pdf
+else
+pdf = ERROR_NO_PS2PDF
+endif
 html = tcldot.html
 
 if WITH_TCL
@@ -36,7 +40,7 @@ noinst_HEADERS = tcldot.h
 pkgtcl_LTLIBRARIES = libtcldot.la libtcldot_builtin.la
 
 man_MANS = $(man)
-pdf_DATA = $(pdf)
+pdf_DATA = tcldot.3tcl.pdf
 html_DATA = $(html)
 endif
 
@@ -108,11 +112,13 @@ pkgIndex.tcl: libtcldot.la
 	sh $(top_srcdir)/tclpkg/mkpkgindex.sh libtcldot.la Tcldot $(VERSION)
 endif
 
+if HAVE_PS2PDF
 tcldot.3tcl.pdf: tcldot.3tcl.ps
 	@PS2PDF@ $< $@
 
 tcldot.3tcl.ps: $(srcdir)/tcldot.3tcl
 	@GROFF@ -Tps -man $< >$@
+endif
 
 EXTRA_DIST = $(man) $(pdf) $(html) README README.Tkspline
 
