--- a/lib/pack/Makefile.am
+++ b/lib/pack/Makefile.am
@@ -23,15 +23,23 @@ man_MANS = pack.3
 pdf_DATA = pack.3.pdf
 #pkgconfig_DATA = libpack.pc
 
+if HAVE_PS2PDF
+pdf = $(pdf_DATA)
+else
+pdf = ERROR_NO_PS2PDF
+endif
+
 libpack_C_la_SOURCES = ccomps.c pack.c
 
+if HAVE_PS2PDF
 pack.3.pdf: pack.3.ps
 	@PS2PDF@ $< $@
 
 pack.3.ps: $(srcdir)/pack.3
 	@GROFF@ -Tps -man $< >$@
+endif
 
-EXTRA_DIST = $(man_MANS) $(pdf_DATA) ptest.c
+EXTRA_DIST = $(man_MANS) $(pdf) ptest.c
 
 DISTCLEANFILES = $(pdf_DATA) pack.3.ps
 
