--- a/tclpkg/tkspline/Makefile.am
+++ b/tclpkg/tkspline/Makefile.am
@@ -7,7 +7,11 @@ pkgtcldir = $(pkglibdir)/tcl
 pdfdir = $(pkgdatadir)/doc/pdf
 
 man = tkspline.3tk
+if HAVE_PS2PDF
 pdf = tkspline.3tk.pdf
+else
+pdf = ERROR_NO_PS2PDF
+endif
 
 # If all else fails there is a local copy of tkInt.h in tkstubs/
 AM_CPPFLAGS = \
@@ -23,7 +27,7 @@ AM_CFLAGS = @X_CFLAGS@ @TCL_CFLAGS@  @TK_CFLAGS@ @TK_DEFS@ \
 if WITH_TK
 pkgtcl_LTLIBRARIES = libtkspline.la
 man_MANS = $(man)
-pdf_DATA = $(pdf)
+pdf_DATA = tkspline.3tk.pdf
 endif
 
 libtkspline_la_LDFLAGS = -no-undefined 
@@ -39,11 +43,13 @@ pkgIndex.tcl: libtkspline.la
 	sh $(top_srcdir)/tclpkg/mkpkgindex.sh libtkspline.la Tkspline $(VERSION)
 endif
 
+if HAVE_PS2PDF
 tkspline.3tk.pdf: tkspline.3tk.ps
 	@PS2PDF@ $< $@
 
 tkspline.3tk.ps: $(srcdir)/tkspline.3tk
 	@GROFF@ -Tps -man $< >$@
+endif
 
 EXTRA_DIST = $(man) $(pdf) dllEntry.c
 
