replace ad hoc name mangling in gml scanner with Flex's option prefix
This drops compatibility with Lex, but other scanners in the tree, e.g.
lib/cgraph/scan.l already require Flex, so this does not change build
requirements. Related to #1806.

--- a/cmd/tools/Makefile.am
+++ b/cmd/tools/Makefile.am
@@ -281,9 +281,7 @@ y.output: $(top_srcdir)/cmd/tools/gmlparse.y
 gmlparse.o gmlparse.lo gmlscan.o gmlscan.lo : gmlscan.c gmlparse.h
 
 gmlscan.c: $(top_srcdir)/cmd/tools/gmlscan.l
-	@LEX@ -i $(top_srcdir)/cmd/tools/gmlscan.l
-	@SED@ "s/yy/gml/g" < @LEX_OUTPUT_ROOT@.c > gmlscan.c
-	rm @LEX_OUTPUT_ROOT@.c
+	@LEX@ --outfile=$@ -i $(top_srcdir)/cmd/tools/gmlscan.l
 
 gml2gv_LDADD = \
 	$(top_builddir)/lib/cgraph/libcgraph.la \
