--- a/cmd/tools/gml2gv.vcxproj
+++ b/cmd/tools/gml2gv.vcxproj
@@ -74,8 +74,8 @@
     <PreBuildEvent>
       <Command>win_flex --outfile=gmlscan.c -i gmlscan.l
 win_bison -dy -Wno-yacc gmlparse.y -o gmlparse-intermediate.c
-sed "s/yy/gml/g" &lt; gmlparse-intermediate.h &gt; gmlparse.h
-sed "s/yy/gml/g" &lt; gmlparse-intermediate.c &gt; gmlparse.c
+copy gmlparse-intermediate.h gmlparse.h
+copy gmlparse-intermediate.c gmlparse.c
 del gmlparse-intermediate.h
 del gmlparse-intermediate.c</Command>
     </PreBuildEvent>
@@ -101,8 +101,8 @@ del gmlparse-intermediate.c</Command>
     <PreBuildEvent>
       <Command>win_flex --outfile=gmlscan.c -i gmlscan.l
 win_bison -dy -Wno-yacc gmlparse.y -o gmlparse-intermediate.c
-sed "s/yy/gml/g" &lt; gmlparse-intermediate.h &gt; gmlparse.h
-sed "s/yy/gml/g" &lt; gmlparse-intermediate.c &gt; gmlparse.c
+copy gmlparse-intermediate.h gmlparse.h
+copy gmlparse-intermediate.c gmlparse.c
 del gmlparse-intermediate.h
 del gmlparse-intermediate.c</Command>
     </PreBuildEvent>
