--- a/cmd/dot/dot.vcxproj
+++ b/cmd/dot/dot.vcxproj
@@ -152,6 +152,12 @@
       <Project>{189e64e3-8a67-4477-8b18-3b174c03f6b9}</Project>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\..\plugin\gdiplus\gvplugin_gdiplus.vcxproj">
+      <Project>{0f4d5d8f-f4d6-4a5d-97e0-9b482257f493}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\plugin\gd\gvplugin_gd.vcxproj">
+      <Project>{2fddc7c5-66e5-4520-b735-fd1a065aa9ba}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\plugin\neato_layout\gvplugin_neato_layout.vcxproj">
       <Project>{92ea9398-9244-4daa-8e7d-2f6bec338cab}</Project>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
