Add archiving of test report also from tests on Windows

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,6 +150,7 @@ portable-source:
         - Packages/*/*/*/*/*/*/*.zip
         reports:
             metrics: metrics.txt
+            junit: ./report.xml
     tags:
         - windows
 
