Fix math library not linked with lib/sparse and remove from gvpack
The gvpack tool only uses math functions indirectly through other
libraries including plugin/neato_layout which use lib/sparse.

--- a/lib/sparse/CMakeLists.txt
+++ b/lib/sparse/CMakeLists.txt
@@ -36,3 +36,7 @@ target_include_directories(sparse PRIVATE
     ${GRAPHVIZ_LIB_DIR}/common
     ${GRAPHVIZ_LIB_DIR}/sfdpgen
 )
+
+target_link_libraries(sparse
+    ${MATH_LIB}
+)
