Archive Linux CMake builds under Packages/experimental to avoid deployment
Changes COLLECTION to experimental for Linux CMake builds which causes
the artifacts to be archived under Packages/experimental which is not
deployed to https://www2.graphviz.org/Packages.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -254,6 +254,7 @@ ubuntu18-04-cmake-build:
     <<: *deb_build_definition
     before_script:
         - export build_system="cmake"
+        - echo experimental > COLLECTION
     tags:
         - linux
     image: "graphviz/graphviz:ubuntu-18.04"
