--- a/cmd/tools/Makefile.am
+++ b/cmd/tools/Makefile.am
@@ -219,6 +219,10 @@ gvpack_LDADD = \
 	$(top_builddir)/lib/cdt/libcdt.la \
 	$(top_builddir)/plugin/neato_layout/libgvplugin_neato_layout.la
 
+# add a non-existent C++ source to force the C++ compiler to be used for
+# linking, so the C++ standard library is included for our C++ dependencies
+nodist_EXTRA_gvpack_SOURCES = fake.cxx
+
 if ENABLE_STATIC
 gvpack_static_SOURCES = gvpack.c
 gvpack_static_CPPFLAGS = $(AM_CPPFLAGS) -DDEMAND_LOADING=0
