--- a/cmd/edgepaint/Makefile.am
+++ b/cmd/edgepaint/Makefile.am
@@ -39,6 +39,10 @@ edgepaint_LDADD = \
 	$(top_builddir)/lib/cdt/libcdt.la \
 	$(ANN_LIBS) -lstdc++ -lm
 
+# add a non-existent C++ source to force the C++ compiler to be used for
+# linking, so the C++ standard library is included for our C++ dependencies
+nodist_EXTRA_edgepaint_SOURCES = fake.cxx
+
 if HAVE_PS2PDF
 edgepaint.1.pdf: edgepaint.1.ps
 	@PS2PDF@ $< $@
