--- a/cmd/mingle/Makefile.am
+++ b/cmd/mingle/Makefile.am
@@ -38,7 +38,7 @@ mingle_LDADD = \
 	$(top_builddir)/lib/common/libcommon_C.la \
 	$(top_builddir)/lib/cgraph/libcgraph.la \
 	$(top_builddir)/lib/cdt/libcdt.la \
-	$(ANN_LIBS) -lstdc++ -lm 
+	$(ANN_LIBS) -lm
 
 # add a non-existent C++ source to force the C++ compiler to be used for
 # linking, so the C++ standard library is included for our C++ dependencies
