--- a/lib/sfio/Sfio_f/Makefile.am
+++ b/lib/sfio/Sfio_f/Makefile.am
@@ -5,7 +5,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/lib
 
 noinst_LTLIBRARIES = libsfiof_C.la
 
-libsfiof_C_la_SOURCES = _sfdlen.c _sfeof.c _sferror.c \
+libsfiof_C_la_SOURCES = _sfeof.c _sferror.c \
 	_sffileno.c _sfgetc.c _sfllen.c _sfputc.c _sfputd.c \
 	_sfputl.c _sfputm.c _sfputu.c _sfslen.c _sfstacked.c \
 	_sfulen.c _sfvalue.c
