--- a/lib/sfio/Sfio_f/Makefile.am
+++ b/lib/sfio/Sfio_f/Makefile.am
@@ -6,6 +6,6 @@ AM_CPPFLAGS = -I$(top_srcdir)/lib
 noinst_LTLIBRARIES = libsfiof_C.la
 
 libsfiof_C_la_SOURCES = \
-	_sffileno.c _sfgetc.c _sfputc.c _sfputd.c \
+	_sffileno.c _sfgetc.c _sfputc.c \
 	_sfputl.c _sfputm.c _sfputu.c _sfslen.c _sfstacked.c \
 	_sfulen.c _sfvalue.c
