--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -159,6 +159,7 @@ portable-source:
     script:
         - ci/install-packages.sh
         - export GV_VERSION=$( cat VERSION )
+        - export OS_ID=$( cat OS_ID )
         - python3 -m pytest --junitxml=report.xml tests rtest
     artifacts:
         reports:
