remove explicit output filename in PDF Makefile rules
For all of these rules, the output filename ps2pdf infers is the same as the
explicit one being removed, so this change is a no-op. The intent here is to
make these invocations compatible with either ps2pdf or pstopdf filling the role
of @PS2PDF@. The usage for these two differs slightly:

  ps2pdf infile [outfile]
  pstopdf infile [-o outfile]

pstopdf is not currently supported -- there is an attempt at this in
configure.ac, but it is faulty -- but we plan to support it in an upcoming
commit. Related to #1763.

--- a/cmd/dot/Makefile.am
+++ b/cmd/dot/Makefile.am
@@ -75,19 +75,19 @@ uninstall-hook:
 
 if HAVE_PS2PDF
 dot.1.pdf: dot.1.ps
-	@PS2PDF@ $< $@
+	@PS2PDF@ $<
 
 dot.1.ps: $(srcdir)/dot.1
 	@GROFF@ -Tps -man $< >$@
 
 osage.1.pdf: osage.1.ps
-	@PS2PDF@ $< $@
+	@PS2PDF@ $<
 
 osage.1.ps: $(srcdir)/osage.1
 	@GROFF@ -Tps -man $< >$@
 
 patchwork.1.pdf: patchwork.1.ps
-	@PS2PDF@ $< $@
+	@PS2PDF@ $<
 
 patchwork.1.ps: $(srcdir)/patchwork.1
 	@GROFF@ -Tps -man $< >$@
