--- a/cmd/gvmap/Makefile.am
+++ b/cmd/gvmap/Makefile.am
@@ -66,19 +66,19 @@ gvmap.sh :
 
 if HAVE_PS2PDF
 gvmap.1.pdf: gvmap.1.ps
-	@PS2PDF@ $< $@
+	@PS2PDF@ $<
 
 gvmap.1.ps: $(srcdir)/gvmap.1
 	@GROFF@ -Tps -man $< >$@
 
 cluster.1.pdf: cluster.1.ps
-	@PS2PDF@ $< $@
+	@PS2PDF@ $<
 
 cluster.1.ps: $(srcdir)/cluster.1
 	@GROFF@ -Tps -man $< >$@
 
 gvmap.sh.1.pdf: gvmap.sh.1.ps
-	@PS2PDF@ $< $@
+	@PS2PDF@ $<
 
 gvmap.sh.1.ps: $(srcdir)/gvmap.sh.1
 	@GROFF@ -Tps -man $< >$@
