--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -88,7 +88,7 @@ smyrna_static_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
 
 if HAVE_PS2PDF
 smyrna.1.pdf: smyrna.1.ps
-	@PS2PDF@ $< $@
+	@PS2PDF@ $<
 
 smyrna.1.ps: $(srcdir)/smyrna.1
 	@GROFF@ -Tps -man $< >$@
