--- a/contrib/prune/Makefile.am
+++ b/contrib/prune/Makefile.am
@@ -28,7 +28,7 @@ prune_LDADD = $(top_builddir)/lib/ingraphs/libingraphs_C.la \
 
 if HAVE_PS2PDF
 prune.1.pdf: prune.1.ps
-	@PS2PDF@ $< $@
+	@PS2PDF@ $<
 
 prune.1.ps: prune.1
 	@GROFF@ -Tps -man $< >$@
