--- a/config-cmake.h.in
+++ b/config-cmake.h.in
@@ -17,6 +17,7 @@
 #cmakedefine HAVE_VFORK_H
 #cmakedefine HAVE_X11_INTRINSIC_H
 #cmakedefine HAVE_X11_XAW_TEXT_H
+#cmakedefine HAVE_GETOPT_H
 
 // Functions
 #cmakedefine HAVE_DRAND48
